force-app/main/default/objects/GTMRequest__c/GTMRequest__c.object-meta.xml
<CustomObject>
    <description>Objeto para almacenar el registro y orquestar el flujo de GTM (Go to market)</description>
    <label>GTM Request</label>
    <nameField>
        <label>GTM Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GTM Request</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>