force-app/main/default/objects/GTMRequest__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Intended for the registration of the different VASS delegations</description>
    <label>Business Unit</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Cuenta_interna</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>GTM Request (Business Unit)</relationshipLabel>
    <relationshipName>GTM_Request</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>