force-app/main/default/objects/GTMRequest__c/fields/Clan_Principal__c.field-meta.xml
<CustomField>
    <fullName>Clan_Principal__c</fullName>
    <label>Clan Principal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Gerencias</valueSetName>
    </valueSet>
</CustomField>