force-app/main/default/objects/GTMRequest__c/fields/CreatedBySede__c.field-meta.xml
<CustomField>
    <fullName>CreatedBySede__c</fullName>
    <description>Hidden field to display Business Unit information.</description>
    <formula>If(ISBLANK (RelatedOpportunity__c),
if(ISPICKVAL(Business_Unit__r.Sede__c ,&apos;1210&apos;),&apos;Serbatic&apos;,
if(ISPICKVAL(Business_Unit__r.Sede__c,&apos;1110&apos;) ,&apos;Nateevo España&apos;,
if(ISPICKVAL(Business_Unit__r.Sede__c,&apos;1000&apos;),&apos;VASS Madrid&apos;,
if(ISPICKVAL(Business_Unit__r.Sede__c,&apos;4410&apos;),&apos;VASS Perú&apos;,
if(ISPICKVAL(Business_Unit__r.Sede__c,&apos;4210&apos;),&apos;VASS Colombia&apos;,
if(ISPICKVAL(Business_Unit__r.Sede__c,&apos;4510&apos;),&apos;VASS México&apos;,
if(ISPICKVAL(Business_Unit__r.Sede__c,&apos;4110&apos;),&apos;VASS Chile&apos;,
if(ISPICKVAL(Business_Unit__r.Sede__c,&apos;2110&apos;),&apos;VASS UK&apos;,
if(ISPICKVAL(Business_Unit__r.Sede__c,&apos;2310&apos;),&apos;VASS Benelux&apos;,
if(ISPICKVAL(Business_Unit__r.Sede__c,&apos;4000&apos;),&apos;Nateevo México&apos;,
if(ISPICKVAL(Business_Unit__r.Sede__c,&apos;4001&apos;),&apos;Nateevo M360&apos;, 
if(ISPICKVAL(Business_Unit__r.Sede__c,&apos;4010&apos;),&apos;Nateevo Colombia&apos;,&apos;VASS Madrid&apos;)))))))))))), 
if(ISPICKVAL(RelatedOpportunity__r.Sede_Venta__r.Sede__c ,&apos;1210&apos;),&apos;Serbatic&apos;,
if(ISPICKVAL(RelatedOpportunity__r.Sede_Venta__r.Sede__c,&apos;1110&apos;) ,&apos;Nateevo España&apos;,
if(ISPICKVAL(RelatedOpportunity__r.Sede_Venta__r.Sede__c,&apos;1000&apos;),&apos;VASS Madrid&apos;,
if(ISPICKVAL(RelatedOpportunity__r.Sede_Venta__r.Sede__c,&apos;4410&apos;),&apos;VASS Perú&apos;,
if(ISPICKVAL(RelatedOpportunity__r.Sede_Venta__r.Sede__c,&apos;4210&apos;),&apos;VASS Colombia&apos;,
if(ISPICKVAL(RelatedOpportunity__r.Sede_Venta__r.Sede__c,&apos;4510&apos;),&apos;VASS México&apos;,
if(ISPICKVAL(RelatedOpportunity__r.Sede_Venta__r.Sede__c,&apos;4110&apos;),&apos;VASS Chile&apos;,
if(ISPICKVAL(RelatedOpportunity__r.Sede_Venta__r.Sede__c,&apos;2110&apos;),&apos;VASS UK&apos;,
if(ISPICKVAL(RelatedOpportunity__r.Sede_Venta__r.Sede__c,&apos;2310&apos;),&apos;VASS Benelux&apos;,
if(ISPICKVAL(RelatedOpportunity__r.Sede_Venta__r.Sede__c,&apos;4000&apos;),&apos;Nateevo México&apos;,
if(ISPICKVAL(RelatedOpportunity__r.Sede_Venta__r.Sede__c,&apos;4001&apos;),&apos;Nateevo M360&apos;, 
if(ISPICKVAL(RelatedOpportunity__r.Sede_Venta__r.Sede__c,&apos;4010&apos;),&apos;Nateevo Colombia&apos;,&apos;VASS Madrid&apos;)))))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created by Sede</label>
    <type>Text</type>
</CustomField>