force-app/main/default/objects/GTMRequest__c/fields/GTM_Leader_Check__c.field-meta.xml
<CustomField>
    <fullName>GTM_Leader_Check__c</fullName>
    <formula>IF( GTMLeader__c  = $User.Id, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GTM Leader Check</label>
    <type>Checkbox</type>
</CustomField>