force-app/main/default/objects/GTMRequest__c/fields/GTMLeader__c.field-meta.xml
<CustomField>
    <fullName>GTMLeader__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GTM Leader</label>
    <referenceTo>User</referenceTo>
    <relationshipName>GTM</relationshipName>
    <type>Lookup</type>
</CustomField>