force-app/main/default/objects/GTMRequest__c/fields/MarketType__c.field-meta.xml
<CustomField>
    <fullName>MarketType__c</fullName>
    <label>Business Verticals</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Mercados</valueSetName>
    </valueSet>
</CustomField>