force-app/main/default/objects/GTMRequest__c/fields/ReasonOfCancellation__c.field-meta.xml
<CustomField>
    <fullName>ReasonOfCancellation__c</fullName>
    <label>Reason of Cancellation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unqualified</fullName>
            </value>
            <value>
                <fullName>Customer canceled</fullName>
            </value>
            <value>
                <fullName>VASS does not offer due to commercial decision</fullName>
            </value>
            <value>
                <fullName>Operational decision</fullName>
            </value>
            <value>
                <fullName>Canceled by administrative process</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>