force-app/main/default/objects/GTMRequest__c/fields/RelatedAccount__c.field-meta.xml
<CustomField>
    <fullName>RelatedAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>GTM</relationshipName>
    <type>Lookup</type>
</CustomField>