force-app/main/default/objects/GTMRequest__c/fields/RelatedOpportunity__c.field-meta.xml
<CustomField>
    <fullName>RelatedOpportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>GTM Request</relationshipLabel>
    <relationshipName>GTM</relationshipName>
    <type>Lookup</type>
</CustomField>