force-app/main/default/objects/GTMRequest__c/fields/Requester__c.field-meta.xml
<CustomField>
    <fullName>Requester__c</fullName>
    <description>Field to register requester&apos;s data for GTM petition.</description>
    <label>Requester</label>
    <length>120</length>
    <type>Text</type>
</CustomField>