force-app/main/default/objects/GTMRequest__c/recordTypes/Global.recordType-meta.xml
<RecordType>
    <fullName>Global</fullName>
    <active>true</active>
    <label>Global</label>
</RecordType>