force-app/main/default/objects/GTMRequest__c/recordTypes/SOLA.recordType-meta.xml
<RecordType>
    <fullName>SOLA</fullName>
    <active>true</active>
    <label>SOLA</label>
</RecordType>