force-app/main/default/objects/GTMRequest__c/recordTypes/Spain.recordType-meta.xml
<RecordType>
    <fullName>Spain</fullName>
    <active>true</active>
    <label>España</label>
</RecordType>