force-app/main/default/objects/GTMRequest__c/validationRules/GTM_Reason_For_Cancellation.validationRule-meta.xml
<ValidationRule>
    <fullName>GTM_Reason_For_Cancellation</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL (Stage__c, &quot;Close/Cancelled&quot;) &amp;&amp; ISBLANK (TEXT(ReasonOfCancellation__c))</errorConditionFormula>
    <errorDisplayField>ReasonOfCancellation__c</errorDisplayField>
    <errorMessage>You must complete Reason of Cancellation</errorMessage>
</ValidationRule>