force-app/main/default/objects/GTMRequest__c/validationRules/GTM_Request_Restriction.validationRule-meta.xml
<ValidationRule>
    <fullName>GTM_Request_Restriction</fullName>
    <active>true</active>
    <errorConditionFormula>AND ( ISNEW(), RelatedOpportunity__r.GTM_Request__c = true)</errorConditionFormula>
    <errorMessage>You can associate only one GTM Request per opportunity</errorMessage>
</ValidationRule>