force-app/main/default/objects/GTMRequest__c/validationRules/GTM_Stage_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>GTM_Stage_Validation</fullName>
    <active>true</active>
    <description>Validation rule to prevent the user from creating a GTM Request in differente Stages</description>
    <errorConditionFormula>AND(ISNEW(), NOT (ISPICKVAL(Stage__c, &quot;Request&quot;)))</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>GTM Request must be created in the &quot;Request&quot; stage.</errorMessage>
</ValidationRule>