force-app/main/default/objects/GTMRequest__c/validationRules/GTMLeaderValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>GTMLeaderValidation</fullName>
    <active>true</active>
    <description>Validation to prevent User from select &quot;Execute&quot; Stage if there is no GTM Leader assigned</description>
    <errorConditionFormula>AND(GTMLeader__c = null,ISPICKVAL( Stage__c, &quot;Execute&quot;))</errorConditionFormula>
    <errorMessage>It is not possible to select the &quot;Execute&quot; Stage  if there is no GTM Leader assigned.</errorMessage>
</ValidationRule>