force-app/main/default/objects/GTMRequest__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CreatedBySede__c</columns>
    <columns>Requester__c</columns>
    <columns>MarketType__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>