force-app/main/default/objects/GTMRequest__c/listViews/GTM_Assigned.listView-meta.xml
<ListView>
    <fullName>GTM_Assigned</fullName>
    <columns>NAME</columns>
    <columns>GTMLeader__c</columns>
    <columns>RelatedOpportunity__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>GTMLeader__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>CreatedBySede__c</field>
        <operation>equals</operation>
        <value>VASS Madrid,VASS Barcelona,VASS Galicia,Serbatic,Nateevo España</value>
    </filters>
    <label>GTM Assigned España</label>
</ListView>