force-app/main/default/objects/GTMRequest__c/listViews/GTM_Assigned_Global.listView-meta.xml
<ListView>
    <fullName>GTM_Assigned_Global</fullName>
    <columns>NAME</columns>
    <columns>GTMLeader__c</columns>
    <columns>RelatedOpportunity__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>GTMLeader__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>CreatedBySede__c</field>
        <operation>equals</operation>
        <value>VASS México,VASS UK,VASS Benelux,Nateevo México,Nateevo M360</value>
    </filters>
    <label>GTM Assigned Global</label>
</ListView>