force-app/main/default/objects/GTMRequest__c/listViews/GTM_Unassigned.listView-meta.xml
<ListView>
    <fullName>GTM_Unassigned</fullName>
    <columns>NAME</columns>
    <columns>MarketType__c</columns>
    <columns>Solution__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>GTMLeader__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>CreatedBySede__c</field>
        <operation>equals</operation>
        <value>VASS Madrid,VASS Barcelona,VASS Galicia,Serbatic,Nateevo España</value>
    </filters>
    <label>GTM Unassigned España</label>
</ListView>