force-app/main/default/objects/GTMRequest__c/listViews/GTM_Unassigned_Global.listView-meta.xml
<ListView>
    <fullName>GTM_Unassigned_Global</fullName>
    <columns>NAME</columns>
    <columns>MarketType__c</columns>
    <columns>Solution__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>GTMLeader__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>CreatedBySede__c</field>
        <operation>equals</operation>
        <value>VASS México,VASS UK,VASS Benelux,Nateevo México,Nateevo M360</value>
    </filters>
    <label>GTM Unassigned Global</label>
</ListView>