force-app/main/default/objects/GTMRequest__c/listViews/My_own_GTM_Request.listView-meta.xml
<ListView>
    <fullName>My_own_GTM_Request</fullName>
    <columns>NAME</columns>
    <columns>GTMLeader__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>GTM_Leader_Check__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Stage__c</field>
        <operation>notEqual</operation>
        <value>Close,Cancelled</value>
    </filters>
    <label>My GTM Request</label>
</ListView>